fixtures/frontend/milestone-2/valid/source-option-contract-parameter-context-free-builtins/main.aivi
type HttpError =
  | Timeout

type Session = {
    token: Text
}

type Pair A =
  | Pair A (Option A)

value requestBody =
    Pair 1 None

@source http.post "/login" with {
    body: requestBody
}
signal login : Signal (Result HttpError Session)
